# metal

./: .gitignore  CMakeLists.txt  README.md
src/: main.c
templates/: stub.S
